--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite --open"
-    
+    "dev": "vite --open",
+    "lint": "eslint ./src"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +13,8 @@
     "nanoid": "^4.0.2",
     "vite": "^4.4.9"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "eslint": "^8.49.0"
+  }
 }
